// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Image banner left orientation renders correctly 1`] = `
.c20 {
  display: inline-flex;
  position: relative;
  text-decoration: none;
  transition: all 0.2s;
  height: 2.5rem;
  width: 100%;
  justify-content: center;
  align-items: center;
  border: none;
  cursor: pointer;
  padding: 0.6rem 1rem;
  border-radius: 0.5rem;
  background-color: #E52630;
  color: #FFFFFF;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
  font-weight: 700;
  text-transform: inherit;
  letter-spacing: 0;
  font-size: 1rem;
  line-height: 1.25rem;
}

.c20 >a {
  text-decoration: none;
}

.c20:hover,
.c20:focus,
.c20:focus-within,
.c20:focus-visible {
  background-color: #890B11;
  outline-offset: 3px;
}

.c20:disabled {
  cursor: not-allowed;
  opacity: 0.5;
}

.c21:disabled {
  cursor: not-allowed;
  opacity: 0.5;
}

.c6 {
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
  font-weight: 400;
  text-transform: inherit;
  letter-spacing: 0;
  font-size: 1rem;
  line-height: 1.25rem;
}

.c6 {
  color: #000000;
}

.c6 span {
  font-size: inherit;
  line-height: inherit;
}

.c14 {
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
  font-weight: 400;
  text-transform: inherit;
  letter-spacing: 0;
  font-size: 1rem;
  line-height: 1.25rem;
}

.c14 span {
  font-size: inherit;
  line-height: inherit;
}

.c13 {
  width: 100%;
  position: relative;
  display: flex;
  flex-direction: column;
  color: #000000;
}

.c15 {
  margin-bottom: 0.5rem;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
  font-weight: 400;
  text-transform: inherit;
  letter-spacing: 0;
  font-size: 1rem;
  line-height: 1.25rem;
}

.c17 {
  position: relative;
  box-sizing: border-box;
  width: 100%;
  height: 48px;
  padding: 1rem 1.5rem;
  background-color: #F4F3F5;
  border: 1px solid;
  border-color: #E1E2E3;
  box-shadow: none;
  appearance: none;
  color: #000000;
  border-radius: 0.5rem;
  font-size: inherit;
  z-index: 2;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
}

.c17 :focus {
  border: 1px solid #666;
}

.c16 {
  position: relative;
  font-size: 1.25rem;
}

.c9 {
  text-align: left;
}

.c0 {
  position: relative;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  height: auto;
  background-color: #F4F3F5;
  width: 100%;
  padding: 2rem 1rem 2rem 1rem;
}

.c1 {
  position: relative;
  background-color: #FFFFFF;
  border-radius: 1rem;
  overflow: hidden;
  padding: none;
  width: 100%;
  box-sizing: border-box;
  box-shadow: rgba(0,0,0,0.15) 0px 0px 1rem;
}

.c1:hover button[data-play-pause],
.c1:focus-within button[data-play-pause] {
  opacity: 0.8;
  transition-delay: 0s;
}

.c2 {
  position: relative;
  text-align: center;
  align-items: center;
  display: block;
  width: 100%;
  max-width: 1216px;
  margin-left: auto;
  margin-right: auto;
}

.c3 {
  position: relative;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
}

.c10 {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  justify-content: flex-start;
}

.c4 {
  position: relative;
  width: 100%;
  background-color: #FFFFFF;
  box-shadow: rgba(0,0,0,0.15) 0px 0px 1rem;
  text-align: left;
  margin-left: auto;
  margin-right: auto;
}

.c4 input {
  max-width: 100%;
  margin: 0;
}

.c5 {
  color: #000000;
  padding: 2rem;
  margin: 0;
  border: none;
}

.c7 {
  display: block;
  width: 100%;
  margin-bottom: 0.5rem;
  text-align: left;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
  font-weight: 700;
  text-transform: inherit;
  letter-spacing: 0;
  font-size: 1rem;
  line-height: 1.25rem;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
}

.c11 {
  display: flex;
  flex-direction: column;
  gap: 0;
  width: 100%;
}

.c12 {
  width: 100%;
  margin-bottom: 1rem;
}

.c8 {
  padding-bottom: 1rem;
  color: #000000;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
  font-weight: 400;
  text-transform: inherit;
  letter-spacing: 0;
  font-size: 1rem;
  line-height: 1.25rem;
}

.c18 {
  color: #000000;
  font-size: 0.75rem;
  line-height: normal;
  padding-bottom: 0.5rem;
}

.c18 p,
.c18 span,
.c18 * {
  font-size: inherit;
  line-height: inherit;
}

.c19 {
  margin-top: 1rem;
}

.c19 button {
  width: 100%;
  min-height: 48px;
}

@media (min-width: 740px) {
  .c20 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 1024px) {
  .c20 {
    font-size: 1.125rem;
    line-height: 1.375rem;
  }
}

@media (min-width: 740px) {
  .c20 {
    width: auto;
  }
}

@media (min-width: 1024px) {
  .c20 {
    width: auto;
  }
}

@media (min-width: 740px) {
  .c6 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 1024px) {
  .c6 {
    font-size: 1.125rem;
    line-height: 1.375rem;
  }
}

@media (min-width: 740px) {
  .c14 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 1024px) {
  .c14 {
    font-size: 1.125rem;
    line-height: 1.375rem;
  }
}

@media (min-width: 740px) {
  .c15 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 1024px) {
  .c15 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 740px) {
  .c17 {
    max-width: 290px;
  }
}

@media (min-width: 740px) {
  .c0 {
    padding: 2rem 2rem 2rem 2rem;
  }
}

@media (min-width: 1024px) {
  .c1 {
    min-height: 700px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    max-width: 1500px;
    margin-left: auto;
    margin-right: auto;
  }
}

@media (min-width: 1024px) {
  .c2 {
    display: flex;
    padding: 2rem;
    gap: 2rem;
    flex-direction: row;
  }
}

@media (min-width: 1024px) {
  .c3 {
    flex: 1 1 0;
    min-width: 0;
    width: auto;
    display: flex;
    justify-content: flex-start;
    order: 1;
  }
}

@media (min-width: 740px) {
  .c4 {
    width: 100%;
    margin-right: auto;
    margin-left: auto;
  }
}

@media (min-width: 1024px) {
  .c4 {
    border-radius: 1rem;
    max-width: 461px;
    min-width: 400px;
    margin-left: 0;
    margin-right: 0;
  }
}

@media (min-width: 740px) {
  .c5 {
    padding: 2rem;
  }
}

@media (min-width: 740px) {
  .c7 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 1024px) {
  .c7 {
    font-size: 1.125rem;
    line-height: 1.375rem;
  }
}

@media (min-width: 740px) {
  .c8 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 1024px) {
  .c8 {
    font-size: 1.125rem;
    line-height: 1.375rem;
  }
}

@media (min-width: 740px) {
  .c19 button {
    padding: 1rem 2rem;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      aria-live="polite"
      className="c2"
    >
      <div
        className="c3"
      >
        <form
          className="c4"
          data-test="email-banner"
          noValidate={true}
          onSubmit={[Function]}
        >
          <fieldset
            className="c5"
          >
            <span
              className="c6 c7"
            >
              Stay in the know!
            </span>
            <div
              className="c8"
            >
              <div
                className="c9"
                dangerouslySetInnerHTML={
                  {
                    "__html": "<p>Sign up for exclusive news, stories and updates about everything Comic Relief.</p>",
                  }
                }
              />
            </div>
            <div
              className="c10"
            >
              <div
                className="c11"
              >
                <div
                  className="c12"
                >
                  <label
                    className="c13"
                    htmlFor="first-name"
                  >
                    <span
                      className="c14 c15"
                      dangerouslySetInnerHTML={
                        {
                          "__html": "First name",
                        }
                      }
                    />
                    <div
                      className="c16"
                    >
                      <input
                        aria-describedby="first-name"
                        aria-required={true}
                        className="c17"
                        error={false}
                        id="first-name"
                        name="firstName"
                        onBlur={[Function]}
                        onChange={[Function]}
                        placeholder="Enter your first name"
                        prefixLength={0}
                        required={false}
                        type="text"
                      />
                    </div>
                  </label>
                </div>
                <div
                  className="c12"
                >
                  <label
                    className="c13"
                    htmlFor="last-name"
                  >
                    <span
                      className="c14 c15"
                      dangerouslySetInnerHTML={
                        {
                          "__html": "Last name",
                        }
                      }
                    />
                    <div
                      className="c16"
                    >
                      <input
                        aria-describedby="last-name"
                        aria-required={true}
                        className="c17"
                        error={false}
                        id="last-name"
                        name="lastName"
                        onBlur={[Function]}
                        onChange={[Function]}
                        placeholder="Enter your last name"
                        prefixLength={0}
                        required={false}
                        type="text"
                      />
                    </div>
                  </label>
                </div>
              </div>
              <div
                className="c12"
              >
                <label
                  className="c13"
                  htmlFor="email"
                >
                  <span
                    className="c14 c15"
                    dangerouslySetInnerHTML={
                      {
                        "__html": "Email address",
                      }
                    }
                  />
                  <div
                    className="c16"
                  >
                    <input
                      aria-describedby="email"
                      aria-required={true}
                      className="c17"
                      error={false}
                      id="email"
                      name="email"
                      onBlur={[Function]}
                      onChange={[Function]}
                      placeholder="example@youremail.com"
                      prefixLength={0}
                      required={false}
                      type="email"
                    />
                  </div>
                </label>
              </div>
            </div>
            <div
              className="c18"
            >
              <div
                className="c9"
                dangerouslySetInnerHTML={
                  {
                    "__html": "<p>By agreeing to subscribe to our emails and clicking the button to sign up, you are consenting to the terms of our <a href="/privacy-notice">Privacy Policy</a>. You can unsubscribe at any time.</p>",
                  }
                }
              />
            </div>
            <div
              className="c19"
            >
              <button
                className="c20 c21"
                data-test="subscribe-button"
                data-testid="Button"
                disabled={false}
                type="submit"
              >
                Sign up
                <div
                  className=""
                  data-testid="LoaderContainer"
                />
              </button>
            </div>
          </fieldset>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`Image banner renders correctly 1`] = `
.c20 {
  display: inline-flex;
  position: relative;
  text-decoration: none;
  transition: all 0.2s;
  height: 2.5rem;
  width: 100%;
  justify-content: center;
  align-items: center;
  border: none;
  cursor: pointer;
  padding: 0.6rem 1rem;
  border-radius: 0.5rem;
  background-color: #E52630;
  color: #FFFFFF;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
  font-weight: 700;
  text-transform: inherit;
  letter-spacing: 0;
  font-size: 1rem;
  line-height: 1.25rem;
}

.c20 >a {
  text-decoration: none;
}

.c20:hover,
.c20:focus,
.c20:focus-within,
.c20:focus-visible {
  background-color: #890B11;
  outline-offset: 3px;
}

.c20:disabled {
  cursor: not-allowed;
  opacity: 0.5;
}

.c21:disabled {
  cursor: not-allowed;
  opacity: 0.5;
}

.c6 {
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
  font-weight: 400;
  text-transform: inherit;
  letter-spacing: 0;
  font-size: 1rem;
  line-height: 1.25rem;
}

.c6 {
  color: #000000;
}

.c6 span {
  font-size: inherit;
  line-height: inherit;
}

.c14 {
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
  font-weight: 400;
  text-transform: inherit;
  letter-spacing: 0;
  font-size: 1rem;
  line-height: 1.25rem;
}

.c14 span {
  font-size: inherit;
  line-height: inherit;
}

.c13 {
  width: 100%;
  position: relative;
  display: flex;
  flex-direction: column;
  color: #000000;
}

.c15 {
  margin-bottom: 0.5rem;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
  font-weight: 400;
  text-transform: inherit;
  letter-spacing: 0;
  font-size: 1rem;
  line-height: 1.25rem;
}

.c17 {
  position: relative;
  box-sizing: border-box;
  width: 100%;
  height: 48px;
  padding: 1rem 1.5rem;
  background-color: #F4F3F5;
  border: 1px solid;
  border-color: #E1E2E3;
  box-shadow: none;
  appearance: none;
  color: #000000;
  border-radius: 0.5rem;
  font-size: inherit;
  z-index: 2;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
}

.c17 :focus {
  border: 1px solid #666;
}

.c16 {
  position: relative;
  font-size: 1.25rem;
}

.c9 {
  text-align: left;
}

.c0 {
  position: relative;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  height: auto;
  background-color: #F4F3F5;
  width: 100%;
  padding: 0rem 1rem 2rem 1rem;
}

.c1 {
  position: relative;
  background-color: #FFFFFF;
  border-radius: 1rem;
  overflow: hidden;
  padding: none;
  width: 100%;
  box-sizing: border-box;
  box-shadow: rgba(0,0,0,0.15) 0px 0px 1rem;
}

.c1:hover button[data-play-pause],
.c1:focus-within button[data-play-pause] {
  opacity: 0.8;
  transition-delay: 0s;
}

.c2 {
  position: relative;
  text-align: center;
  align-items: center;
  display: block;
  width: 100%;
  max-width: 1216px;
  margin-left: auto;
  margin-right: auto;
}

.c3 {
  position: relative;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
}

.c10 {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  justify-content: flex-start;
}

.c4 {
  position: relative;
  width: 100%;
  background-color: #FFFFFF;
  box-shadow: rgba(0,0,0,0.15) 0px 0px 1rem;
  text-align: left;
  margin-left: auto;
  margin-right: auto;
}

.c4 input {
  max-width: 100%;
  margin: 0;
}

.c5 {
  color: #000000;
  padding: 2rem;
  margin: 0;
  border: none;
}

.c7 {
  display: block;
  width: 100%;
  margin-bottom: 0.5rem;
  text-align: left;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
  font-weight: 700;
  text-transform: inherit;
  letter-spacing: 0;
  font-size: 1rem;
  line-height: 1.25rem;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
}

.c11 {
  display: flex;
  flex-direction: column;
  gap: 0;
  width: 100%;
}

.c12 {
  width: 100%;
  margin-bottom: 1rem;
}

.c8 {
  padding-bottom: 1rem;
  color: #000000;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
  font-weight: 400;
  text-transform: inherit;
  letter-spacing: 0;
  font-size: 1rem;
  line-height: 1.25rem;
}

.c18 {
  color: #000000;
  font-size: 0.75rem;
  line-height: normal;
  padding-bottom: 0.5rem;
}

.c18 p,
.c18 span,
.c18 * {
  font-size: inherit;
  line-height: inherit;
}

.c19 {
  margin-top: 1rem;
}

.c19 button {
  width: 100%;
  min-height: 48px;
}

@media (min-width: 740px) {
  .c20 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 1024px) {
  .c20 {
    font-size: 1.125rem;
    line-height: 1.375rem;
  }
}

@media (min-width: 740px) {
  .c20 {
    width: auto;
  }
}

@media (min-width: 1024px) {
  .c20 {
    width: auto;
  }
}

@media (min-width: 740px) {
  .c6 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 1024px) {
  .c6 {
    font-size: 1.125rem;
    line-height: 1.375rem;
  }
}

@media (min-width: 740px) {
  .c14 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 1024px) {
  .c14 {
    font-size: 1.125rem;
    line-height: 1.375rem;
  }
}

@media (min-width: 740px) {
  .c15 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 1024px) {
  .c15 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 740px) {
  .c17 {
    max-width: 290px;
  }
}

@media (min-width: 740px) {
  .c0 {
    padding: 0rem 2rem 2rem 2rem;
  }
}

@media (min-width: 1024px) {
  .c1 {
    min-height: 700px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    max-width: 1500px;
    margin-left: auto;
    margin-right: auto;
  }
}

@media (min-width: 1024px) {
  .c2 {
    display: flex;
    padding: 2rem;
    gap: 2rem;
    flex-direction: row;
  }
}

@media (min-width: 1024px) {
  .c3 {
    flex: 1 1 0;
    min-width: 0;
    width: auto;
    display: flex;
    justify-content: flex-end;
    order: 2;
  }
}

@media (min-width: 740px) {
  .c4 {
    width: 100%;
    margin-right: auto;
    margin-left: auto;
  }
}

@media (min-width: 1024px) {
  .c4 {
    border-radius: 1rem;
    max-width: 461px;
    min-width: 400px;
    margin-left: 0;
    margin-right: 0;
  }
}

@media (min-width: 740px) {
  .c5 {
    padding: 2rem;
  }
}

@media (min-width: 740px) {
  .c7 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 1024px) {
  .c7 {
    font-size: 1.125rem;
    line-height: 1.375rem;
  }
}

@media (min-width: 740px) {
  .c8 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 1024px) {
  .c8 {
    font-size: 1.125rem;
    line-height: 1.375rem;
  }
}

@media (min-width: 740px) {
  .c19 button {
    padding: 1rem 2rem;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      aria-live="polite"
      className="c2"
    >
      <div
        className="c3"
      >
        <form
          className="c4"
          data-test="email-banner"
          noValidate={true}
          onSubmit={[Function]}
        >
          <fieldset
            className="c5"
          >
            <span
              className="c6 c7"
            >
              Stay in the know!
            </span>
            <div
              className="c8"
            >
              <div
                className="c9"
                dangerouslySetInnerHTML={
                  {
                    "__html": "<p>Sign up for exclusive news, stories and updates about everything Comic Relief.</p>",
                  }
                }
              />
            </div>
            <div
              className="c10"
            >
              <div
                className="c11"
              >
                <div
                  className="c12"
                >
                  <label
                    className="c13"
                    htmlFor="first-name"
                  >
                    <span
                      className="c14 c15"
                      dangerouslySetInnerHTML={
                        {
                          "__html": "First name",
                        }
                      }
                    />
                    <div
                      className="c16"
                    >
                      <input
                        aria-describedby="first-name"
                        aria-required={true}
                        className="c17"
                        error={false}
                        id="first-name"
                        name="firstName"
                        onBlur={[Function]}
                        onChange={[Function]}
                        placeholder="Enter your first name"
                        prefixLength={0}
                        required={false}
                        type="text"
                      />
                    </div>
                  </label>
                </div>
                <div
                  className="c12"
                >
                  <label
                    className="c13"
                    htmlFor="last-name"
                  >
                    <span
                      className="c14 c15"
                      dangerouslySetInnerHTML={
                        {
                          "__html": "Last name",
                        }
                      }
                    />
                    <div
                      className="c16"
                    >
                      <input
                        aria-describedby="last-name"
                        aria-required={true}
                        className="c17"
                        error={false}
                        id="last-name"
                        name="lastName"
                        onBlur={[Function]}
                        onChange={[Function]}
                        placeholder="Enter your last name"
                        prefixLength={0}
                        required={false}
                        type="text"
                      />
                    </div>
                  </label>
                </div>
              </div>
              <div
                className="c12"
              >
                <label
                  className="c13"
                  htmlFor="email"
                >
                  <span
                    className="c14 c15"
                    dangerouslySetInnerHTML={
                      {
                        "__html": "Email address",
                      }
                    }
                  />
                  <div
                    className="c16"
                  >
                    <input
                      aria-describedby="email"
                      aria-required={true}
                      className="c17"
                      error={false}
                      id="email"
                      name="email"
                      onBlur={[Function]}
                      onChange={[Function]}
                      placeholder="example@youremail.com"
                      prefixLength={0}
                      required={false}
                      type="email"
                    />
                  </div>
                </label>
              </div>
            </div>
            <div
              className="c18"
            >
              <div
                className="c9"
                dangerouslySetInnerHTML={
                  {
                    "__html": "<p>By agreeing to subscribe to our emails and clicking the button to sign up, you are consenting to the terms of our <a href="/privacy-notice">Privacy Policy</a>. You can unsubscribe at any time.</p>",
                  }
                }
              />
            </div>
            <div
              className="c19"
            >
              <button
                className="c20 c21"
                data-test="subscribe-button"
                data-testid="Button"
                disabled={false}
                type="submit"
              >
                Sign up
                <div
                  className=""
                  data-testid="LoaderContainer"
                />
              </button>
            </div>
          </fieldset>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`Text-only email widget renders correctly 1`] = `
.c20 {
  display: inline-flex;
  position: relative;
  text-decoration: none;
  transition: all 0.2s;
  height: 2.5rem;
  width: 100%;
  justify-content: center;
  align-items: center;
  border: none;
  cursor: pointer;
  padding: 0.6rem 1rem;
  border-radius: 0.5rem;
  background-color: #E52630;
  color: #FFFFFF;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
  font-weight: 700;
  text-transform: inherit;
  letter-spacing: 0;
  font-size: 1rem;
  line-height: 1.25rem;
}

.c20 >a {
  text-decoration: none;
}

.c20:hover,
.c20:focus,
.c20:focus-within,
.c20:focus-visible {
  background-color: #890B11;
  outline-offset: 3px;
}

.c20:disabled {
  cursor: not-allowed;
  opacity: 0.5;
}

.c21:disabled {
  cursor: not-allowed;
  opacity: 0.5;
}

.c6 {
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
  font-weight: 400;
  text-transform: inherit;
  letter-spacing: 0;
  font-size: 1rem;
  line-height: 1.25rem;
}

.c6 {
  color: #000000;
}

.c6 span {
  font-size: inherit;
  line-height: inherit;
}

.c14 {
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
  font-weight: 400;
  text-transform: inherit;
  letter-spacing: 0;
  font-size: 1rem;
  line-height: 1.25rem;
}

.c14 span {
  font-size: inherit;
  line-height: inherit;
}

.c13 {
  width: 100%;
  position: relative;
  display: flex;
  flex-direction: column;
  color: #000000;
}

.c15 {
  margin-bottom: 0.5rem;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
  font-weight: 400;
  text-transform: inherit;
  letter-spacing: 0;
  font-size: 1rem;
  line-height: 1.25rem;
}

.c17 {
  position: relative;
  box-sizing: border-box;
  width: 100%;
  height: 48px;
  padding: 1rem 1.5rem;
  background-color: #F4F3F5;
  border: 1px solid;
  border-color: #E1E2E3;
  box-shadow: none;
  appearance: none;
  color: #000000;
  border-radius: 0.5rem;
  font-size: inherit;
  z-index: 2;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
}

.c17 :focus {
  border: 1px solid #666;
}

.c16 {
  position: relative;
  font-size: 1.25rem;
}

.c9 {
  text-align: left;
}

.c0 {
  position: relative;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  height: auto;
  background-color: #F4F3F5;
  width: 100%;
  padding: 2rem 1rem 2rem 1rem;
}

.c1 {
  position: relative;
  background-color: #FFFFFF;
  border-radius: 1rem;
  overflow: hidden;
  padding: none;
  width: 100%;
  box-sizing: border-box;
  box-shadow: rgba(0,0,0,0.15) 0px 0px 1rem;
}

.c1:hover button[data-play-pause],
.c1:focus-within button[data-play-pause] {
  opacity: 0.8;
  transition-delay: 0s;
}

.c2 {
  position: relative;
  text-align: center;
  align-items: center;
  display: block;
  width: 100%;
  max-width: 1216px;
  margin-left: auto;
  margin-right: auto;
}

.c3 {
  position: relative;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
}

.c10 {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  justify-content: flex-start;
}

.c4 {
  position: relative;
  width: 100%;
  background-color: #FFFFFF;
  box-shadow: rgba(0,0,0,0.15) 0px 0px 1rem;
  text-align: left;
  margin-left: auto;
  margin-right: auto;
}

.c4 input {
  max-width: 100%;
  margin: 0;
}

.c5 {
  color: #000000;
  padding: 2rem;
  margin: 0;
  border: none;
}

.c7 {
  display: block;
  width: 100%;
  margin-bottom: 1rem;
  text-align: left;
  font-family: 'Anton',Impact,sans-serif;
  font-weight: 400;
  text-transform: uppercase;
  letter-spacing: 0;
  font-size: 2rem;
  line-height: 2rem;
  font-family: 'Anton',Impact,sans-serif;
}

.c11 {
  display: flex;
  flex-direction: column;
  gap: 0;
  width: 100%;
}

.c12 {
  width: 100%;
  margin-bottom: 1rem;
}

.c8 {
  padding-bottom: 1rem;
  color: #000000;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
  font-weight: 400;
  text-transform: inherit;
  letter-spacing: 0;
  font-size: 1rem;
  line-height: 1.25rem;
}

.c18 {
  color: #000000;
  font-size: 0.75rem;
  line-height: normal;
  padding-bottom: 0.5rem;
}

.c18 p,
.c18 span,
.c18 * {
  font-size: inherit;
  line-height: inherit;
}

.c19 {
  margin-top: 1rem;
}

.c19 button {
  width: 100%;
  min-height: 48px;
}

@media (min-width: 740px) {
  .c20 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 1024px) {
  .c20 {
    font-size: 1.125rem;
    line-height: 1.375rem;
  }
}

@media (min-width: 740px) {
  .c20 {
    width: auto;
  }
}

@media (min-width: 1024px) {
  .c20 {
    width: auto;
  }
}

@media (min-width: 740px) {
  .c6 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 1024px) {
  .c6 {
    font-size: 1.125rem;
    line-height: 1.375rem;
  }
}

@media (min-width: 740px) {
  .c14 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 1024px) {
  .c14 {
    font-size: 1.125rem;
    line-height: 1.375rem;
  }
}

@media (min-width: 740px) {
  .c15 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 1024px) {
  .c15 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 740px) {
  .c17 {
    max-width: 290px;
  }
}

@media (min-width: 740px) {
  .c0 {
    padding: 2rem 2rem 2rem 2rem;
  }
}

@media (min-width: 1024px) {
  .c1 {
    min-height: 700px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    max-width: 1500px;
    margin-left: auto;
    margin-right: auto;
  }
}

@media (min-width: 1024px) {
  .c2 {
    display: flex;
    padding: 2rem;
    gap: 2rem;
    flex-direction: row;
  }
}

@media (min-width: 1024px) {
  .c3 {
    flex: 1 1 0;
    min-width: 0;
    width: auto;
    display: flex;
    justify-content: flex-end;
    order: 2;
  }
}

@media (min-width: 740px) {
  .c4 {
    width: 100%;
    margin-right: auto;
    margin-left: auto;
  }
}

@media (min-width: 1024px) {
  .c4 {
    border-radius: 1rem;
    max-width: 461px;
    min-width: 400px;
    margin-left: 0;
    margin-right: 0;
  }
}

@media (min-width: 740px) {
  .c5 {
    padding: 2rem;
  }
}

@media (min-width: 740px) {
  .c7 {
    font-size: 2.5rem;
    line-height: 2.5rem;
  }
}

@media (min-width: 1024px) {
  .c7 {
    font-size: 3rem;
    line-height: 3rem;
  }
}

@media (min-width: 740px) {
  .c8 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 1024px) {
  .c8 {
    font-size: 1.125rem;
    line-height: 1.375rem;
  }
}

@media (min-width: 740px) {
  .c19 button {
    padding: 1rem 2rem;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      aria-live="polite"
      className="c2"
    >
      <div
        className="c3"
      >
        <form
          className="c4"
          data-test="email-banner"
          noValidate={true}
          onSubmit={[Function]}
        >
          <fieldset
            className="c5"
          >
            <span
              className="c6 c7"
            >
              Stay in the know!
            </span>
            <div
              className="c8"
            >
              <div
                className="c9"
                dangerouslySetInnerHTML={
                  {
                    "__html": "<p>Sign up for exclusive news, stories and updates about everything Comic Relief.</p>",
                  }
                }
              />
            </div>
            <div
              className="c10"
            >
              <div
                className="c11"
              >
                <div
                  className="c12"
                >
                  <label
                    className="c13"
                    htmlFor="first-name"
                  >
                    <span
                      className="c14 c15"
                      dangerouslySetInnerHTML={
                        {
                          "__html": "First name",
                        }
                      }
                    />
                    <div
                      className="c16"
                    >
                      <input
                        aria-describedby="first-name"
                        aria-required={true}
                        className="c17"
                        error={false}
                        id="first-name"
                        name="firstName"
                        onBlur={[Function]}
                        onChange={[Function]}
                        placeholder="Enter your first name"
                        prefixLength={0}
                        required={false}
                        type="text"
                      />
                    </div>
                  </label>
                </div>
                <div
                  className="c12"
                >
                  <label
                    className="c13"
                    htmlFor="last-name"
                  >
                    <span
                      className="c14 c15"
                      dangerouslySetInnerHTML={
                        {
                          "__html": "Last name",
                        }
                      }
                    />
                    <div
                      className="c16"
                    >
                      <input
                        aria-describedby="last-name"
                        aria-required={true}
                        className="c17"
                        error={false}
                        id="last-name"
                        name="lastName"
                        onBlur={[Function]}
                        onChange={[Function]}
                        placeholder="Enter your last name"
                        prefixLength={0}
                        required={false}
                        type="text"
                      />
                    </div>
                  </label>
                </div>
              </div>
              <div
                className="c12"
              >
                <label
                  className="c13"
                  htmlFor="email"
                >
                  <span
                    className="c14 c15"
                    dangerouslySetInnerHTML={
                      {
                        "__html": "Email address",
                      }
                    }
                  />
                  <div
                    className="c16"
                  >
                    <input
                      aria-describedby="email"
                      aria-required={true}
                      className="c17"
                      error={false}
                      id="email"
                      name="email"
                      onBlur={[Function]}
                      onChange={[Function]}
                      placeholder="example@youremail.com"
                      prefixLength={0}
                      required={false}
                      type="email"
                    />
                  </div>
                </label>
              </div>
            </div>
            <div
              className="c18"
            >
              <div
                className="c9"
                dangerouslySetInnerHTML={
                  {
                    "__html": "<p>By agreeing to subscribe to our emails and clicking the button to sign up, you are consenting to the terms of our <a href="/privacy-notice">Privacy Policy</a>. You can unsubscribe at any time.</p>",
                  }
                }
              />
            </div>
            <div
              className="c19"
            >
              <button
                className="c20 c21"
                data-test="subscribe-button"
                data-testid="Button"
                disabled={false}
                type="submit"
              >
                Sign up
                <div
                  className=""
                  data-testid="LoaderContainer"
                />
              </button>
            </div>
          </fieldset>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`Text-only email widget with copyColor renders correctly 1`] = `
.c20 {
  display: inline-flex;
  position: relative;
  text-decoration: none;
  transition: all 0.2s;
  height: 2.5rem;
  width: 100%;
  justify-content: center;
  align-items: center;
  border: none;
  cursor: pointer;
  padding: 0.6rem 1rem;
  border-radius: 0.5rem;
  background-color: #E52630;
  color: #FFFFFF;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
  font-weight: 700;
  text-transform: inherit;
  letter-spacing: 0;
  font-size: 1rem;
  line-height: 1.25rem;
}

.c20 >a {
  text-decoration: none;
}

.c20:hover,
.c20:focus,
.c20:focus-within,
.c20:focus-visible {
  background-color: #890B11;
  outline-offset: 3px;
}

.c20:disabled {
  cursor: not-allowed;
  opacity: 0.5;
}

.c21:disabled {
  cursor: not-allowed;
  opacity: 0.5;
}

.c6 {
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
  font-weight: 400;
  text-transform: inherit;
  letter-spacing: 0;
  font-size: 1rem;
  line-height: 1.25rem;
}

.c6 {
  color: #000000;
}

.c6 span {
  font-size: inherit;
  line-height: inherit;
}

.c14 {
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
  font-weight: 400;
  text-transform: inherit;
  letter-spacing: 0;
  font-size: 1rem;
  line-height: 1.25rem;
}

.c14 span {
  font-size: inherit;
  line-height: inherit;
}

.c13 {
  width: 100%;
  position: relative;
  display: flex;
  flex-direction: column;
  color: #000000;
}

.c15 {
  margin-bottom: 0.5rem;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
  font-weight: 400;
  text-transform: inherit;
  letter-spacing: 0;
  font-size: 1rem;
  line-height: 1.25rem;
}

.c17 {
  position: relative;
  box-sizing: border-box;
  width: 100%;
  height: 48px;
  padding: 1rem 1.5rem;
  background-color: #F4F3F5;
  border: 1px solid;
  border-color: #E1E2E3;
  box-shadow: none;
  appearance: none;
  color: #000000;
  border-radius: 0.5rem;
  font-size: inherit;
  z-index: 2;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
}

.c17 :focus {
  border: 1px solid #666;
}

.c16 {
  position: relative;
  font-size: 1.25rem;
}

.c9 {
  text-align: left;
}

.c0 {
  position: relative;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  height: auto;
  background-color: #A20C51;
  width: 100%;
  padding: 2rem 1rem 2rem 1rem;
}

.c1 {
  position: relative;
  background-color: #2C0230;
  border-radius: 1rem;
  overflow: hidden;
  padding: none;
  width: 100%;
  box-sizing: border-box;
  box-shadow: rgba(0,0,0,0.15) 0px 0px 1rem;
}

.c1:hover button[data-play-pause],
.c1:focus-within button[data-play-pause] {
  opacity: 0.8;
  transition-delay: 0s;
}

.c2 {
  position: relative;
  text-align: center;
  align-items: center;
  display: block;
  width: 100%;
  max-width: 1216px;
  margin-left: auto;
  margin-right: auto;
}

.c3 {
  position: relative;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
}

.c10 {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  justify-content: flex-start;
}

.c4 {
  position: relative;
  width: 100%;
  background-color: #FFFFFF;
  box-shadow: rgba(0,0,0,0.15) 0px 0px 1rem;
  text-align: left;
  margin-left: auto;
  margin-right: auto;
}

.c4 input {
  max-width: 100%;
  margin: 0;
}

.c5 {
  color: #000000;
  padding: 2rem;
  margin: 0;
  border: none;
}

.c7 {
  display: block;
  width: 100%;
  margin-bottom: 1rem;
  text-align: left;
  font-family: 'Anton',Impact,sans-serif;
  font-weight: 400;
  text-transform: uppercase;
  letter-spacing: 0;
  font-size: 2rem;
  line-height: 2rem;
  font-family: 'Anton',Impact,sans-serif;
}

.c11 {
  display: flex;
  flex-direction: column;
  gap: 0;
  width: 100%;
}

.c12 {
  width: 100%;
  margin-bottom: 1rem;
}

.c8 {
  padding-bottom: 1rem;
  color: #000000;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
  font-weight: 400;
  text-transform: inherit;
  letter-spacing: 0;
  font-size: 1rem;
  line-height: 1.25rem;
}

.c18 {
  color: #000000;
  font-size: 0.75rem;
  line-height: normal;
  padding-bottom: 0.5rem;
}

.c18 p,
.c18 span,
.c18 * {
  font-size: inherit;
  line-height: inherit;
}

.c19 {
  margin-top: 1rem;
}

.c19 button {
  width: 100%;
  min-height: 48px;
}

@media (min-width: 740px) {
  .c20 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 1024px) {
  .c20 {
    font-size: 1.125rem;
    line-height: 1.375rem;
  }
}

@media (min-width: 740px) {
  .c20 {
    width: auto;
  }
}

@media (min-width: 1024px) {
  .c20 {
    width: auto;
  }
}

@media (min-width: 740px) {
  .c6 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 1024px) {
  .c6 {
    font-size: 1.125rem;
    line-height: 1.375rem;
  }
}

@media (min-width: 740px) {
  .c14 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 1024px) {
  .c14 {
    font-size: 1.125rem;
    line-height: 1.375rem;
  }
}

@media (min-width: 740px) {
  .c15 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 1024px) {
  .c15 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 740px) {
  .c17 {
    max-width: 290px;
  }
}

@media (min-width: 740px) {
  .c0 {
    padding: 2rem 2rem 2rem 2rem;
  }
}

@media (min-width: 1024px) {
  .c1 {
    min-height: 700px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    max-width: 1500px;
    margin-left: auto;
    margin-right: auto;
  }
}

@media (min-width: 1024px) {
  .c2 {
    display: flex;
    padding: 2rem;
    gap: 2rem;
    flex-direction: row;
  }
}

@media (min-width: 1024px) {
  .c3 {
    flex: 1 1 0;
    min-width: 0;
    width: auto;
    display: flex;
    justify-content: flex-end;
    order: 2;
  }
}

@media (min-width: 740px) {
  .c4 {
    width: 100%;
    margin-right: auto;
    margin-left: auto;
  }
}

@media (min-width: 1024px) {
  .c4 {
    border-radius: 1rem;
    max-width: 461px;
    min-width: 400px;
    margin-left: 0;
    margin-right: 0;
  }
}

@media (min-width: 740px) {
  .c5 {
    padding: 2rem;
  }
}

@media (min-width: 740px) {
  .c7 {
    font-size: 2.5rem;
    line-height: 2.5rem;
  }
}

@media (min-width: 1024px) {
  .c7 {
    font-size: 3rem;
    line-height: 3rem;
  }
}

@media (min-width: 740px) {
  .c8 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 1024px) {
  .c8 {
    font-size: 1.125rem;
    line-height: 1.375rem;
  }
}

@media (min-width: 740px) {
  .c19 button {
    padding: 1rem 2rem;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      aria-live="polite"
      className="c2"
    >
      <div
        className="c3"
      >
        <form
          className="c4"
          data-test="email-banner"
          noValidate={true}
          onSubmit={[Function]}
        >
          <fieldset
            className="c5"
          >
            <span
              className="c6 c7"
            >
              Stay in the know!
            </span>
            <div
              className="c8"
            >
              <div
                className="c9"
                dangerouslySetInnerHTML={
                  {
                    "__html": "<p>Sign up for exclusive news, stories and updates about everything Comic Relief.</p>",
                  }
                }
              />
            </div>
            <div
              className="c10"
            >
              <div
                className="c11"
              >
                <div
                  className="c12"
                >
                  <label
                    className="c13"
                    htmlFor="first-name"
                  >
                    <span
                      className="c14 c15"
                      dangerouslySetInnerHTML={
                        {
                          "__html": "First name",
                        }
                      }
                    />
                    <div
                      className="c16"
                    >
                      <input
                        aria-describedby="first-name"
                        aria-required={true}
                        className="c17"
                        error={false}
                        id="first-name"
                        name="firstName"
                        onBlur={[Function]}
                        onChange={[Function]}
                        placeholder="Enter your first name"
                        prefixLength={0}
                        required={false}
                        type="text"
                      />
                    </div>
                  </label>
                </div>
                <div
                  className="c12"
                >
                  <label
                    className="c13"
                    htmlFor="last-name"
                  >
                    <span
                      className="c14 c15"
                      dangerouslySetInnerHTML={
                        {
                          "__html": "Last name",
                        }
                      }
                    />
                    <div
                      className="c16"
                    >
                      <input
                        aria-describedby="last-name"
                        aria-required={true}
                        className="c17"
                        error={false}
                        id="last-name"
                        name="lastName"
                        onBlur={[Function]}
                        onChange={[Function]}
                        placeholder="Enter your last name"
                        prefixLength={0}
                        required={false}
                        type="text"
                      />
                    </div>
                  </label>
                </div>
              </div>
              <div
                className="c12"
              >
                <label
                  className="c13"
                  htmlFor="email"
                >
                  <span
                    className="c14 c15"
                    dangerouslySetInnerHTML={
                      {
                        "__html": "Email address",
                      }
                    }
                  />
                  <div
                    className="c16"
                  >
                    <input
                      aria-describedby="email"
                      aria-required={true}
                      className="c17"
                      error={false}
                      id="email"
                      name="email"
                      onBlur={[Function]}
                      onChange={[Function]}
                      placeholder="example@youremail.com"
                      prefixLength={0}
                      required={false}
                      type="email"
                    />
                  </div>
                </label>
              </div>
            </div>
            <div
              className="c18"
            >
              <div
                className="c9"
                dangerouslySetInnerHTML={
                  {
                    "__html": "<p>By agreeing to subscribe to our emails and clicking the button to sign up, you are consenting to the terms of our <a href="/privacy-notice">Privacy Policy</a>. You can unsubscribe at any time.</p>",
                  }
                }
              />
            </div>
            <div
              className="c19"
            >
              <button
                className="c20 c21"
                data-test="subscribe-button"
                data-testid="Button"
                disabled={false}
                type="submit"
              >
                Sign up
                <div
                  className=""
                  data-testid="LoaderContainer"
                />
              </button>
            </div>
          </fieldset>
        </form>
      </div>
    </div>
  </div>
</div>
`;
